<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧农业</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="msg_exit_message">再按一次退出智慧农业</string>
    <string name="prompt">提示</string>
    <string name="msg_login_message">确定退出登录?</string>
    <string name="scan_text">请将条码放入框内, 即可自动扫描</string>
    <string name="networkstatus_tip">网　络：</string>
    <string name="username_tip">用户名：</string>
    <string name="password_tip">密　码：</string>
    <string name="username_hint">请输入登录账号</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="networkstatus_offline">离线</string>
    <string name="networkstatus_online">在线</string>
    <string name="networkstatus_online_wifi">在线模式(WIFI)</string>
    <string name="login">登录</string>
    <string name="settings">设置</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="btn_ok_tip">确定</string>
    <string name="btn_save_tip">保存</string>
    <string name="btn_del">删除</string>
    <string name="serverAddress_tip">服务器地址:</string>
    <string name="serverAddress_hint">服务器接口地址</string>
    <string name="logout_tip">退出登录</string>
    <string name="downall_tip">一键下载</string>
    <string name="download_tip">下载</string>
    <string name="datadown_title">数据下载</string>
    <string name="back_tip">返回</string>
    <string name="btn_close">关闭</string>
    <string name="shengchen_tip">生成</string>
    <string name="batchNum_tip">批号：</string>
    <string name="nonghuNum_tip">农户：</string>
    <string name="nongtianNum_tip">农田：</string>
    <string name="chanpinNum_tip">产品：</string>
    <string name="shouquRiqi_tip">收取日期：</string>
    <string name="shouquRen_tip">收取人：</string>
    <string name="sm_sqm_tip">扫收取码</string>
    <string name="sm_zsm_tip">扫追溯码</string>
    <string name="sm_tm_tip">扫描条码</string>
    <string name="sm_delsm_tip">删除扫码</string>
    <string name="sm_code_type">扫码类别：</string>
    <string name="select_tip">选择</string>
    <string name="clear_tip">清除</string>
    <string name="weight_tip">重量：</string>
    <string name="unit_tip">单位：</string>
    <string name="btn_down_nonghu_tip">农户信息</string>
    <string name="btn_down_shangpin_tip">农产品信息</string>
    <string name="btn_down_changku_tip">下载仓库信息</string>
    <string name="btn_down_crop_tip">下游客户信息</string>
    <string name="btn_down_task_tip">电商订单数据</string>
    <string name="btn_down_form_tip">下载入出库单</string>
    <string name="btn_down_uploadform">上传入出库单</string>
    <string name="tab_fragment_tip1">基础数据</string>
    <string name="tab_fragment_tip2">码列表</string>
    <string name="msg_serverAddress_empty">服务器地址不能为空!</string>
    <string name="msg_loginName_empty">用户名不能为空!</string>
    <string name="msg_loginPwd_emtpy">密码不能为空!</string>
    <string name="msg_login_failure">用户名或者密码不正确!</string>
    <string name="msg_settings_success">设置成功!</string>
    <string name="msg_download_success">下载成功!</string>
    <string name="label_delete">删除</string>
    <string name="scan_tip">扫码</string>
    <string name="label_repositoty">仓库：</string>
    <string name="to_repositoty">入库</string>
    <string name="select_all">全选</string>
    <string name="create_tip">新建</string>
    <string name="upload_tip">上传</string>
    <string name="upload_all_tip">上传全部</string>
    <string name="modify_tip">修改</string>
    <string name="add_tip">添加</string>
    <string name="receive_no_tip">收取码：</string>
    <string name="track_no_tip">追溯码：</string>
    <string name="orderno_tip">单据号：</string>
    <string name="relation_corp_tip">往来企业：</string>
    <string name="realtion_xycorp_tip">下游客户：</string>
    <string name="query_tip">查询</string>
    <string name="confirm_tip">确定</string>
    <string name="orderinfo_tip">单据信息</string>
    <string name="delcodelist_tip">删除码列表</string>
    <string name="code_count_tip">已扫描数量</string>
    <string name="by_same_level">按同级</string>
    <string name="warnning_do_scan">请先扫描条码</string>
    <string name="warnning_sel_edit">请选择收取码或追溯码</string>
    <string name="warnning_need_code">收取码或追溯码不能为空</string>
    <string name="warnning_need_sel_data">请选择要修改的记录</string>
    <string name="warnning_sel_data">请选择要操作的记录</string>
    <string name="warnning_sel_one_data">请选择一条记录</string>
    <string name="warnning_need_sel_uploaddata">请选择要上传的单据</string>
    <string name="warnning_need_sel_delddata">请选择要删除的单据</string>
    <string name="warnning_no_uploaddata">没有要上传的单据</string>
    <string name="warnning_not_upload">收取码：{0}未上传，无法上传单据</string>
    <string name="warnning_sel_corp">请选择往来企业</string>
    <string name="warnning_need_condition">请输入查询条件</string>
    <string name="warnning_gen_orderno">请生成单据号</string>
    <string name="function_todo">该功能暂不提供</string>
    <string name="loding_tip">正在加载...</string>
    <string name="btn_editform_tip">修改单据</string>
    <!-- 入出库单 -->
    <string name="form_StoreId">单据ID：</string>
    <string name="form_CorpId">企业ID：</string>
    <string name="form_OrderNo">单号：</string>
    <string name="form_state">状态：</string>
    <string name="from_man">开单人：</string>
    <string name="form_date">开单日期：</string>
    <string name="form_corpName">开单企业名称：</string>
    <string name="form_bizCorpName">往来企业名称：</string>
    <string name="form_desc">描述：</string>
    <string name="form_items">明细：</string>
    <string name="form_OrderType">单据类型：</string>
    <string name="form_OrderKind">单据类别：</string>
    <string name="form_OrderTypeText">单据类型：</string>
    <string name="form_BizCorpCode">往来企业编码：</string>
    <string name="form_BizCorpName">往来企业名称：</string>
    <string name="form_BizCorpCodeZD">直调企业ID：</string>
    <string name="form_BizCorpNameZD">直调企业：</string>
    <string name="form_Actor">操作员：</string>
    <string name="form_ActDate">操作时间：</string>
    <string name="keyword_hint">请输入关键字</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    <string name="tip_title">提示信息</string>
    <string name="tip_dataupload">数据上传中</string>
    <string name="tip_dataupload_failed">数据上传失败，请稍后再试</string>

    <string name="data_loadding">正在加载...</string>
    <string name="data_failed">加载失败...</string>
    
    <string name="login_loading">正在登录...</string>
    <string name="login_succeed">登录成功!</string>
    <string name="login_failed">登录失败...</string>
    <string name="tip_zero">0</string>
    
    
    <string name="store_no_tip">单据号:</string>
    <string name="store_bizcorp_tip">往来企业:</string>
    <string name="store_date_tip">单据日期:</string>
    
    <string name="login_type_off_hip">离线方式：</string>
    <string name="offline_not_action">当前处于离线状态，无法进行此操作</string>
    <string name="offline_not_action_ck">离线模式下不支持此操作：出库操作需要在线对产品追溯码进行有效性校验，请切换为在线模式后再继续操作!</string>
    <string name="unregister_phoneno_login">该手机号未注册，请注册后再使用</string>
    
    <string name="pw_sm_hip1">收取码扫描</string>
    <string name="pw_sm_hip2">追溯码扫描</string>
    <string name="pw_sm_hip3">已扫描数量:</string>
</resources>