<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bj"
    android:orientation="vertical" >

    <include layout="@layout/com_header" />

    <ScrollView
        android:id="@+id/sv1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="47dp"
            android:layout_marginRight="47dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_nonghu"
                style="@style/btnDataList2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_down_nonghu_tip" />

            <Button
                android:id="@+id/btn_shangpin"
                style="@style/btnDataList2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_down_shangpin_tip" />

            <Button
                android:id="@+id/btn_changku"
                style="@style/btnDataList2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_down_changku_tip" />

            <Button
                android:id="@+id/btn_corp"
                style="@style/btnDataList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_down_crop_tip" />

            <Button
                android:id="@+id/btn_task"
                style="@style/btnDataList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_down_task_tip" />
            
            <Button
                android:id="@+id/btn_uploadform1"
                style="@style/btnDataList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btn_down_uploadform" />
            
            <Button
                android:id="@+id/btnVersion"
                style="@style/btnDataList2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/soft_update_title" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnDownall"
                    style="@style/btnStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/downall_tip" />

                <Button
                    android:id="@+id/btnBack"
                    style="@style/btnStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="23dp"
                    android:layout_weight="1"
                    android:text="@string/back_tip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>