<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/com_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/chkSelAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all" />

        <Button
            android:id="@+id/btnNew"
            style="@style/btnStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:autoLink="web"
            android:visibility="gone"
            android:text="@string/create_tip" />

        <Button
            android:id="@+id/btnUpload"
            style="@style/btnStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:autoLink="web"
            android:text="@string/upload_tip" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstReps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/list_border" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp" >

        <Button
            android:id="@+id/btnModify"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/modify_tip" />

        <Button
            android:id="@+id/btnDel"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/label_delete" />

        <Button
            android:id="@+id/btnBack"
            style="@style/btnStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/back_tip" />
    </LinearLayout>

</LinearLayout>