<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include layout="@layout/com_header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orderno_tip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editOrderNo"
            android:inputType="text"
            android:layout_width="0dp"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </EditText>
        
        <Button
            android:id="@+id/btnGen"
            style="@style/btnStyle"
            android:text="@string/shengchen_tip" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form_OrderType" />
    <Spinner
            android:id="@+id/lstStoreType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relation_corp_tip" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editQueryCorp"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <requestFocus />
        </EditText>
        
        <Button
            android:id="@+id/btnQuery"
            style="@style/btnStyle"
            android:text="@string/query_tip" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <ListView
        android:id="@+id/lstCorp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/list_border" >
    </ListView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnConfirm"
            style="@style/btnStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_magin_lr20"
            android:layout_weight="1"
            android:text="@string/confirm_tip" />

        <Button
            android:id="@+id/btnBack"
            style="@style/btnStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_magin_lr20"
            android:layout_marginRight="@dimen/btn_magin_lr20"
            android:layout_weight="1"
            android:text="@string/back_tip" />
    </LinearLayout>

</LinearLayout>
