<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/com_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/chkSelAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all" />

        <CheckBox
            android:id="@+id/chkIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_repositoty" />

        <Button
            android:id="@+id/btnUpload"
            style="@style/btnStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/upload_tip" />

        <Button
            android:id="@+id/btnUploadAll"
            style="@style/btnStyle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/upload_all_tip"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/lstReps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/list_border" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnDel"
            style="@style/btnStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_magin_lr20"
            android:layout_marginRight="@dimen/btn_magin_lr20"
            android:layout_weight="1"
            android:text="@string/label_delete" />

        <Button
            android:id="@+id/btnBack"
            style="@style/btnStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_magin_lr20"
            android:layout_marginRight="@dimen/btn_magin_lr20"
            android:layout_weight="1"
            android:text="@string/back_tip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:visibility="gone" >

        <Button
            android:id="@+id/btnRepo"
            style="@style/btnStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_magin_lr20"
            android:layout_weight="1"
            android:text="@string/to_repositoty" />

        <Button
            android:id="@+id/btnNew"
            style="@style/btnStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/btn_magin_lr20"
            android:layout_weight="1"
            android:text="@string/create_tip" />
    </LinearLayout>

</LinearLayout>